fix: center gauge values, tighten subtab-chart gap, remove magic-circle deco

--- a/scss/component/_components.scss
+++ b/scss/component/_components.scss
@@ -245,6 +245,7 @@
     &__value {
       width: 3ch;
       min-width: 0;
+      text-align: center;
       font-family: $mg-font-body;
       font-size: 16px;
       font-weight: 800;
@@ -257,6 +258,7 @@
     &__max {
       width: 3ch;
       min-width: 0;
+      text-align: center;
       font-family: $mg-font-body;
       font-size: 16px;
       font-weight: 800;
