--- a/scss/sheet/_layout.scss
+++ b/scss/sheet/_layout.scss
@@ -95,7 +95,7 @@
   .mg-shared {
     display: flex;
     flex-direction: column;
-    gap: 14px;
+    gap: 9px;
   }
 }
 
